--- a/plugins/lgdis/assets/stylesheets/issue_addition.css
+++ b/plugins/lgdis/assets/stylesheets/issue_addition.css
@@ -5,3 +5,12 @@ div.xml_field table{
 div.xml_field td {
   padding: 0px;
 }
+
+p.table_border {
+  width: 500px;
+  border: thin solid black;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
