--- a/plugins/lgdis/app/views/shelters/_search_conditions.html.erb
+++ b/plugins/lgdis/app/views/shelters/_search_conditions.html.erb
@@ -3,7 +3,7 @@
   <div class="splitcontentleft">
     <%= field_for :shelter_type do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert),:include_blank => true) %>
+      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert, @search.shelter_type_eq),:include_blank => true) %>
     <% end %>
     
     <%= field_for :location_area, :label => "地区名" do |key, label| %>
@@ -13,14 +13,14 @@
     
     <%= field_for :usable_flag do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert),:include_blank => true) %>
+      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert, @search.usable_flag_eq),:include_blank => true) %>
     <% end %>
     
     <%= field_for :opened_at do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field "#{key}_gte", :size=>'10' %><%= calendar_for("search_#{key}_gte") %>
+      <%= f.text_field "#{key}_gte", :value => @search.opened_at_gte, :size=>'10' %><%= calendar_for("search_#{key}_gte") %>
       ～
-      <%= f.text_field "#{key}_lte", :size=>'10' %><%= calendar_for("search_#{key}_lte") %>
+      <%= f.text_field "#{key}_lte", :value => @search.opened_at_lte, :size=>'10' %><%= calendar_for("search_#{key}_lte") %>
     <% end %>
   </div>
   
@@ -32,18 +32,18 @@
     
     <%= field_for :openable_flag do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert),:include_blank => true) %>
+      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert, @search.openable_flag_eq),:include_blank => true) %>
     <% end %>
     
     <%= field_for :closed_at do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field "#{key}_gte", :size=>'10' %><%= calendar_for("search_#{key}_gte") %>
+      <%= f.text_field "#{key}_gte", :value => @search.closed_at_gte, :size=>'10' %><%= calendar_for("search_#{key}_gte") %>
       ～
-      <%= f.text_field "#{key}_lte", :size=>'10' %><%= calendar_for("search_#{key}_lte") %>
+      <%= f.text_field "#{key}_lte", :value => @search.closed_at_lte, :size=>'10' %><%= calendar_for("search_#{key}_lte") %>
     <% end %>
     <%= field_for :status do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert),:include_blank => true) %>
+      <%= f.select("#{key}_eq", options_for_select(@shelter_const[key.to_s].invert, @search.status_eq),:include_blank => true) %>
     <% end %>
   </div>
 </div>
@@ -53,25 +53,25 @@
     <%= field_for :households do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.households_gte, :size=>'10' %>
     <% end %>
     
     <%= field_for :upper_care_level_three_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.upper_care_level_three_count_gte, :size=>'10' %>
     <% end %>
     
     <%= field_for :bedridden_elderly_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.bedridden_elderly_count_gte, :size=>'10' %>
     <% end %>
     
     <%= field_for :physical_disability_certificate_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.physical_disability_certificate_count_gte, :size=>'10' %>
     <% end %>
   </div>
   
@@ -79,19 +79,19 @@
     <%= field_for :head_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.head_count_gte, :size=>'10' %>
     <% end %>
     
     <%= field_for :elderly_alone_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.elderly_alone_count_gte, :size=>'10' %>
     <% end %>
     
     <%= field_for :elderly_dementia_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.elderly_dementia_count_gte, :size=>'10' %>
     <% end %>
   </div>
   
@@ -99,19 +99,19 @@
     <%= field_for :injury_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.injury_count_gte, :size=>'10' %>
     <% end %>
     
     <%= field_for :elderly_couple_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.elderly_couple_count_gte, :size=>'10' %>
     <% end %>
     
     <%= field_for :rehabilitation_certificate_count do |key, label| %>
       <%= label_tag{label} %>
       ＞
-      <%= f.text_field "#{key}_gte", :size=>'10' %>
+      <%= f.text_field "#{key}_gte", :value => @search.rehabilitation_certificate_count_gte, :size=>'10' %>
     <% end %>
   </div>
 </div>
@@ -119,7 +119,7 @@
 <div class="nonsplitcontent">
   <%= field_for :note do |key, label| %>
     <%= label_tag{label} %>
-    <%= f.text_field "#{key}_like", :size=>'50' %>
+    <%= f.text_field "#{key}_like", :value => @search.note_like, :size=>'50' %>
   <% end %>
 </div>
 
