--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -104,6 +104,13 @@ $(function(){
 </table>
 <input type="checkbox" id="xml_body_view_sampling" checked><label for="xml_body_view_sampling">石巻市関連情報のみ</label>
 <%== print_xml_field(val, "xml_body") %>
+
+<fieldset class="collapsible collapsed">
+<legend onclick="toggleFieldset(this);"><%= l(:map) %></legend>
+    <div id="map_canvas" class="map_field"></div>
+  </legend>
+</fieldset>
+
 <script>
 $(function(){
   $("#xml_body_view_sampling").change(function(){
@@ -116,11 +123,15 @@ $(function(){
   // 地図表示
   google.maps.event.addDomListener(window, 'load', function() {
     var mapdiv = document.getElementById('map_canvas');
+    var lat  = <%= issue.issues_additional_data.first.latitude %>
+    var lon  = <%= issue.issues_additional_data.first.longitude %>
+    var addr = <%== "'#{issue.issues_additional_data.first.address}'" %>
+
     var myOptions = {
         zoom: 12,
         // TODO
         // issues_addition_datum データ(緯度・経度)を代入
-        center: new google.maps.LatLng(38.434463491669746, 141.30293369293213),
+        center: new google.maps.LatLng(lat, lon),
         mapTypeId: google.maps.MapTypeId.ROADMAP,
         scaleControl: true,
     };
@@ -129,7 +140,7 @@ $(function(){
     var marker = new google.maps.Marker({
       // TODO
       // issues_addition_datum データ)(緯度・経度)を代入
-      position: new google.maps.LatLng(38.434463491669746, 141.30293369293213),
+      position: new google.maps.LatLng(lat, lon),
       map: map
     });
 
@@ -137,7 +148,7 @@ $(function(){
     var infowindow = new google.maps.InfoWindow({
       // TODO
       // issues_addition_datum データ(住所)を代入
-      content: 'test',
+      content: addr
     });
     google.maps.event.addListener(marker, 'click', function() {
       infowindow.open(map,marker);
@@ -146,15 +157,5 @@ $(function(){
   //]]>
 </script>
 <% end %>
-
 <% end %>
 
-
-<fieldset class="collapsible collapsed">
-<legend onclick="toggleFieldset(this);"><%= l(:map) %></legend>
-    <div id="map_canvas" style="width: 700px; height: 500px"></div>
-  </legend>
-</fieldset>
-
-<script type="text/javascript">
-</script>
