--- a/plugins/lgdis/assets/stylesheets/issue.css
+++ b/plugins/lgdis/assets/stylesheets/issue.css
@@ -14,3 +14,10 @@ p.table_border {
   padding-top: 0px;
   padding-bottom: 0px;
 }
+
+div.map_field {
+  width: auto;
+  margin-left: auto;
+  margin-right: 10px;
+  height: 500px;
+}
